--- a/ouro-room-website/ouro-frontend/src/App.css
+++ b/ouro-room-website/ouro-frontend/src/App.css
@@ -27,6 +27,21 @@ body,
   animation: roll-record 6s linear infinite;
 }
 
+.click-text {
+  position: absolute;
+  top: 100%; /* vertically center */
+  left: 50%; /* horizontally center */
+  transform: translate(-50%, -50%); /* center exactly */
+  color: white;
+  font-weight: 700;
+  font-size: 0.8vw;
+  user-select: none;
+  pointer-events: none;
+  text-shadow: 0 0 6px rgba(0, 0, 0, 0.7); /* optional: make text pop */
+  white-space: nowrap;
+  z-index: 10;
+}
+
 /* Logo Styling */
 img,
 .home-logo,
@@ -35,6 +50,10 @@ img,
   display: block;
   margin: 5vh auto;
   filter: drop-shadow(0 0 0.5vw rgb(248, 250, 250));
+}
+
+.home-container {
+  margin-bottom: 5vh;
 }
 
 .logo {
@@ -111,7 +130,9 @@ img,
 }
 
 .form-element {
-  margin: 3vw;
+  margin: 2vw;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .form-header-container {
@@ -123,13 +144,15 @@ img,
 }
 
 .form-element-container {
-  background-color: rgb(113, 191, 215);
-  color: black;
+  background-color: #171f26;
+  color: rgb(255, 255, 255);
   border-radius: 1vw;
-  margin: 2w !important;
+  margin: 1w !important;
   padding: 2vw !important;
   padding-right: 5vw !important;
   padding-left: 5vw !important;
+  width: 60vw;
+  align-items: center;
 }
 
 .form-element.mantine-TextInput-root,
@@ -167,7 +190,8 @@ img,
   cursor: pointer;
   border-radius: 1vw !important;
   font-size: 1vw !important;
-  background-color: rgb(113, 191, 215);
+  background-color: rgb(26, 79, 95);
+
   position: relative;
   width: max-content;
   margin-right: 2vw;
@@ -250,9 +274,21 @@ img,
   cursor: pointer;
   border-radius: 1vw !important;
   font-size: 1vw !important;
-  background-color: #171f26;
+  background-color: rgb(113, 191, 215);
+
   position: relative;
   width: max-content;
+}
+
+.submit-button:hover {
+  box-shadow: 0 0 2vw 0.5vw rgb(255, 255, 255);
+  background-color: black;
+  cursor: pointer;
+  color: rgb(255, 255, 255);
+}
+
+.mantine-Input-wrapper {
+  font-size: 1vw;
 }
 
 .admin-title {
@@ -292,16 +328,27 @@ img,
   gap: 1rem;
 }
 
+.glow-text {
+  color: white;
+  background-color: transparent;
+  cursor: pointer;
+  transition: text-shadow 0.3s ease;
+}
+
+.glow-text:hover {
+  text-shadow: 0 0 20px rgb(255, 255, 255), 0 0 40px rgb(113, 191, 215), 0 0 60px rgb(113, 191, 215);
+}
+
 .mantine-focus-auto.mantine-active.button:hover,
 .admin-button:hover,
 .admin-button:hover,
-.submit-button:hover,
 .back-button:hover,
 .card-button:hover,
 .audio-play-button:hover,
 .poster-img:hover,
-.message-button:hover {
-  box-shadow: 0 0 2vw 0.5vw rgb(113, 191, 215);
+.message-button:hover
+ {
+  box-shadow: 0 0 2vw 0.5vw rgb(255, 255, 255);
   background-color: transparent;
   cursor: pointer;
   color: white;
@@ -342,7 +389,6 @@ img,
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  margin-bottom: 3vh;
 }
 
 .latest-mix-scroll-container {
@@ -374,7 +420,9 @@ img,
   margin: 1.5vw;
   margin-bottom: 2vw;
   width: clamp(250px, 25vw, 85vw);
-  background-color: rgb(26, 79, 95);
+     background-color: #171f26;
+
+
   padding: 0.5vw;
   border: 2px solid white;
 }
@@ -391,7 +439,6 @@ img,
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 3vh;
 }
 
 .page-section-header-1 {
@@ -507,21 +554,22 @@ img,
 
 .select-card {
   background-color: #171f26;
-  justify-content: space-around;
+  justify-content: space-evenly;
   width: max-content;
   z-index: 9;
   padding: 0.5vw;
   padding-left: 1vw;
   padding-right: 1vw;
-  text-align: left;
+  text-align: center;
   display: flex;
   flex-direction: column;
   height: max-content;
   color: white;
   border-radius: 1vw;
   align-items: center;
-  margin: 2vw;
-  min-height: 300px;
+  margin: 1.5vw;
+  width: 25vw;
+  height: 35vh;
 }
 
 .gallery-select-card {
@@ -805,8 +853,7 @@ img,
 
 .poster-img {
   cursor: pointer;
-  width: 25vw;
-  margin: 3vw !important;
+  width: 30vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -822,8 +869,8 @@ img,
 }
 
 .gallery-card {
-  height: 25vw;
-  margin: 1vw !important;
+  width: 20vw;
+  margin: 1.5vw !important;
 }
 
 .gallery-row {
@@ -1047,8 +1094,8 @@ img,
 }
 
 .profile-img {
-  width: 30vw;
-  margin: 10vw;
+  width: 20vw;
+  margin: 5vw;
 }
 
 .profile-header-text {
@@ -1128,7 +1175,8 @@ img,
   flex-direction: row;
   align-items: center;
   text-align: left;
-  background-color: rgba(152, 61, 90, 0.2);
+    background-color: hsl(208, 25%, 12%, 60%);
+
   height: 100vh;
   justify-content: space-evenly;
 }
@@ -1158,6 +1206,11 @@ img,
 .event-profile-item {
   margin: 4vh;
   min-width: 30vw;
+}
+
+.event-profile-item-box {
+  margin: 2vw;
+  text-align: left;
 }
 
 .date-text {
